[INFER] Add object test when statically walking the prototype chain for CALLPROP, bug 645985.